# openhome-hermes-operator

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
bridge/hermes_operator/: app.py  cli.py  client.py  models.py  voice.py
docs/: architecture.md  openhome-application.md  pre-device-wiring.md
docs/plans/: 2026-05-23-openhome-hermes-operator.md
openhome_ability/hermes-operator/: README.md  main.py
scripts/: demo_curl.sh  package_ability.sh  run_bridge_fake.sh  run_bridge_live.sh
tests/: conftest.py  test_app.py  test_auth.py  test_cli.py  test_client.py  test_fake_mode.py  test_models.py  test_scripts.py  test_voice.py
