[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openhome-hermes-operator"
version = "0.1.0"
description = "OpenHome ability bridge for Hermes Agent"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "pydantic>=2.0",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "httpx>=0.27",
]

[tool.setuptools]
package-dir = {"" = "bridge"}

[tool.setuptools.packages.find]
where = ["bridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
