[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openhome-hermes-operator"
version = "0.1.0"
description = "Local-first OpenHome voice operator bridge for Hermes Agent"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Joey Rizzolo", email = "joeyr1983@gmail.com" }]
keywords = ["openhome", "hermes-agent", "voice", "agents", "local-first", "home-lab"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Home Automation",
  "Topic :: Software Development :: User Interfaces",
]
dependencies = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "pydantic>=2.0",
  "uvicorn>=0.27",
]

[project.urls]
Homepage = "https://github.com/joeynyc/openhome-hermes-operator"
Repository = "https://github.com/joeynyc/openhome-hermes-operator"
Issues = "https://github.com/joeynyc/openhome-hermes-operator/issues"
Documentation = "https://github.com/joeynyc/openhome-hermes-operator/tree/main/docs"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "httpx>=0.27",
]

[tool.setuptools]
package-dir = {"" = "bridge"}

[tool.setuptools.packages.find]
where = ["bridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
